// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`websocket ws endpoint should return success 1`] = `
{
  "data": {
    "ask_price": 125,
    "ask_volume": 11,
    "bid_price": 123,
    "bid_volume": 12,
    "mid_price": 124,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
  },
}
`;

exports[`websocket ws endpoint should return success 2`] = `
{
  "data": {
    "ask_price": 125,
    "ask_volume": 11,
    "bid_price": 123,
    "bid_volume": 12,
    "mid_price": 124,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
  },
}
`;

exports[`websocket ws endpoint should return success 3`] = `
{
  "data": {
    "result": 124,
  },
  "result": 124,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
  },
}
`;

exports[`websocket ws endpoint should return success 4`] = `
{
  "data": {
    "result": 124,
  },
  "result": 124,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
  },
}
`;

exports[`websocket ws endpoint should return success 5`] = `
{
  "data": {
    "ask_price": 125,
    "ask_volume": 11,
    "bid_price": 123,
    "bid_volume": 12,
    "mid_price": 124,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
  },
}
`;
